[tool.poetry]
name = "gwinc"
version = "0.1.0"
description = ""
authors = ["JingYu Ning <115336923+jrunkening@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
numpy = "^1.24.3"
scipy = "^1.10.1"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6.3"
matplotlib = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
