[tool.poetry]
name = "gwinc"
version = "0.1.0"
description = "Gravitational wave interferometer noise calculator"
authors = ["JingYu Ning <115336923+jrunkening@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
numpy = "^1.24.3"
scipy = "^1.10.1"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6.3"
matplotlib = "^3.7.1"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
sphinx = "^6.2.1"
sphinx-rtd-theme = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
